update translation of books/fdp-primer to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53719

--- a/documentation/content/ru/books/fdp-primer/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/_index.adoc
@@ -1,5 +1,5 @@
 ---
-add_single_page_link: true
+add_single_page_link: 'true'
 authors:
   - 
     author: 'The FreeBSD Documentation Project'
@@ -9,7 +9,7 @@ description: 'Все, что вам нужно знать, чтобы начат
 next: books/fdp-primer/preface
 params:
   path: /books/fdp-primer/
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["FDP", "documentation", "FreeBSD", "Index"]
 title: 'Проект документации FreeBSD: введение для новых участников'
 trademarks: ["freebsd", "general", "git"]
