--- a/documentation/content/ru/books/fdp-primer/doc-build/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/doc-build/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/asciidoctor-primer
 params:
   path: /books/fdp-primer/doc-build/
 prev: books/fdp-primer/structure
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["build", "process", "make"]
 title: 'Глава 5. Процесс сборки документации FreeBSD'
 weight: 6
@@ -244,7 +244,7 @@ endif::[]
 В проекте документации есть три файла [.filename]#Makefile# для сборки всей или части документации.
 
 * Файл [.filename]#Makefile# в каталоге [.filename]#documentation# предназначен только для сборки документации.
-* Файл [.filename]#Makefile# в директории [.filename]#website# предназначен только для сборки веб-сайта.
+* Файл [.filename]#Makefile# в каталоге [.filename]#website# предназначен только для сборки веб-сайта.
 * [.filename]#Makefile# в корне дерева исходников собирает как документацию, так и веб-сайт.
 
 Файл [.filename]#Makefile# в подкаталогах также поддерживает `make run` для обслуживания собранного содержимого с помощью внутреннего веб-сервера Hugo. По умолчанию этот веб-сервер работает на порту 1313.
