--- a/documentation/content/ru/books/fdp-primer/editor-config/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/editor-config/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/trademarks
 params:
   path: /books/fdp-primer/editor-config/
 prev: books/fdp-primer/writing-style
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["editor", "configuration", "vim", "emacs", "FreeBSD"]
 title: 'Глава 13. Настройка редактора'
 weight: 13
@@ -56,7 +56,7 @@ endif::[]
 Установите из package:editors/vim[], затем следуйте инструкциям по настройке в разделе crossref:editor-config[editor-config-vim-config,Конфигурация]. Более опытные пользователи могут использовать полноценный линтер, например link:https://github.com/dense-analysis/ale[Ale], который также может работать как клиент link:https://langserver.org/[Language Server Protocol] для Vim.
 
 [[editor-config-vim-use]]
-=== Использование
+=== Используйте
 
 Создатели страниц Справочника могут использовать следующие сочетания клавиш для переформатирования:
 
@@ -299,7 +299,7 @@ color ,red "^(([ ]{2})+|(TAB+))*[ ]{1}[^ ]{1}"
 ....
 
 [[editor-config-nano-use]]
-=== Использование
+=== Используйте
 
 Укажите дополнительные полезные опции при запуске редактора:
 
