--- a/documentation/content/ru/books/fdp-primer/examples/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/examples/_index.adoc
@@ -3,7 +3,7 @@ description: 'Пример статьи и книги, используемых 
 params:
   path: /books/fdp-primer/examples/
 prev: books/fdp-primer/see-also/
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["examples", "tutorial", "AsciiDoctor", "Book", "Article"]
 title: 'Приложение A. Примеры'
 weight: 16
@@ -68,21 +68,38 @@ trademarks: ["general"]
 ---
 
 = Пример книги
-:doctype: book :toc: macro :toclevels: 2 :icons: font :xrefstyle: basic :relfileprefix: ../ :outfilesuffix: :sectnums: :sectnumlevels: 6 :partnums: :chapter-signifier: Chapter :part-signifier: Part :source-highlighter: rouge :experimental: :skip-front-matter: :book: true :pdf: false
+:doctype: book 
+:toc: macro 
+:toclevels: 2 
+:icons: font 
+:xrefstyle: basic 
+:relfileprefix: ../ 
+:outfilesuffix: 
+:sectnums: 
+:sectnumlevels: 6 
+:partnums: 
+:chapter-signifier: Chapter 
+:part-signifier: Part 
+:source-highlighter: rouge 
+:experimental: 
+:skip-front-matter: 
+:book: true 
+:pdf: false
 
-ifeval::["{backend}" == "html5"]
-:chapters-path: content/ru/books/bookname/
+ifeval::["{backend}" == "html5"] 
+:chapters-path: content/ru/books/bookname/ 
 endif::[]
 
-ifeval::["{backend}" == "pdf"]
-:chapters-path:
+ifeval::["{backend}" == "pdf"] 
+:chapters-path: 
 endif::[]
 
-ifeval::["{backend}" == "epub3"]
-:chapters-path:
+ifeval::["{backend}" == "epub3"] 
+:chapters-path: 
 endif::[]
 
-[abstract] Аннотация
+[abstract]
+Аннотация
 
 Раздел аннотации
 
@@ -120,7 +137,14 @@ trademarks: ["general"]
 ---
 
 = Пример статьи
-:doctype: article :toc: macro :toclevels: 1 :icons: font :sectnums: :sectnumlevels: 6 :source-highlighter: rouge :experimental:
+:doctype: article 
+:toc: macro 
+:toclevels: 1 
+:icons: font 
+:sectnums: 
+:sectnumlevels: 6 
+:source-highlighter: rouge 
+:experimental:
 
 '''
 
