--- a/documentation/content/ru/books/fdp-primer/manual-pages/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/manual-pages/_index.adoc
@@ -1,10 +1,10 @@
 ---
-description: 'Как работать со Cправочником FreeBSD'
+description: 'Как работать со Справочником FreeBSD'
 next: books/fdp-primer/writing-style
 params:
   path: /books/fdp-primer/manual-pages/
 prev: books/fdp-primer/weblate
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["manual pages", "introduction", "guide", "reference"]
 title: 'Глава 11. Справочник'
 weight: 11
