--- a/documentation/content/ru/books/fdp-primer/manual-pages/_index.po
+++ b/documentation/content/ru/books/fdp-primer/manual-pages/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
+"PO-Revision-Date: 2025-10-29 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primermanual-pages_index/ru/>\n"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/manual-pages/_index.adoc:1
 #, no-wrap
 msgid "How to work with the FreeBSD Manual Pages"
-msgstr "Как работать со Cправочником FreeBSD"
+msgstr "Как работать со Справочником FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/manual-pages/_index.adoc:1
 #, no-wrap
 msgid "Chapter 11. Manual Pages"
@@ -74,8 +74,8 @@ msgid ""
 "When the user types `man ls`, a search is performed for a manual page "
 "matching `ls`.  The first matching result is displayed."
 msgstr ""
-"Страницы Справочника обычно отображаются интерактивно с помощью команды "
-"man:man[1]. Когда пользователь вводит `man ls`, выполняется поиск страницы "
+"Страницы Справочника обычно отображаются интерактивно с помощью команды man:"
+"man[1]. Когда пользователь вводит `man ls`, выполняется поиск страницы "
 "Справочника, соответствующей `ls`. Первый найденный результат отображается."
 
 #. type: Title ==
@@ -231,13 +231,13 @@ msgid ""
 "based markup which is usually best avoided."
 msgstr ""
 "Для man-страниц использовались различные формы разметки и программы "
-"отображения.  FreeBSD использовала man:groff[7] и более новую "
-"man:mandoc[1].  Большинство существующих man-страниц FreeBSD, а также все "
-"новые, используют разметку в формате man:mdoc[7].  Это простая построчная "
-"разметка, обладающая достаточной выразительностью.  В основном она "
-"семантическая: части текста помечаются по их назначению, а не по тому, как "
-"они должны выглядеть при отображении.  Существует некоторая разметка, "
-"основанная на внешнем виде, которую обычно лучше избегать."
+"отображения.  FreeBSD использовала man:groff[7] и более новую man:"
+"mandoc[1].  Большинство существующих man-страниц FreeBSD, а также все новые, "
+"используют разметку в формате man:mdoc[7].  Это простая построчная разметка, "
+"обладающая достаточной выразительностью.  В основном она семантическая: "
+"части текста помечаются по их назначению, а не по тому, как они должны "
+"выглядеть при отображении.  Существует некоторая разметка, основанная на "
+"внешнем виде, которую обычно лучше избегать."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/manual-pages/_index.adoc:116
@@ -812,8 +812,8 @@ msgstr "Важные макросы"
 msgid ""
 "Some very common macros will be shown here.  For more usage examples, see "
 "man:mdoc[7], man:groff_mdoc[7], or search for actual use in [.filename]#/usr/"
-"share/man/man*# directories.  For example, to search for examples of the "
-"`.Bd` _Begin display_ macro:"
+"share/man/man*# directories.  For example, to search for examples of the `."
+"Bd` _Begin display_ macro:"
 msgstr ""
 "Здесь будут показаны некоторые очень распространённые макросы. Для большего "
 "количества примеров использования см. man:mdoc[7], man:groff_mdoc[7] или "
@@ -1270,9 +1270,8 @@ msgstr "% igor ./mynewmanpage.8\n"
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/manual-pages/_index.adoc:508
 msgid ""
-"Another useful tool is package:textproc/vale[].  It does not support the "
-"man:mdoc[7] syntax but the rendered manual page can be read from standard "
-"input:"
+"Another useful tool is package:textproc/vale[].  It does not support the man:"
+"mdoc[7] syntax but the rendered manual page can be read from standard input:"
 msgstr ""
 "Еще один полезный инструмент — package:textproc/vale[]. Он не поддерживает "
 "синтаксис man:mdoc[7], но обработанную страницу руководства можно прочитать "
