--- a/documentation/content/ru/books/fdp-primer/overview/_index.po
+++ b/documentation/content/ru/books/fdp-primer/overview/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-11-12 21:52+0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primeroverview_index/ru/>\n"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:1
 #, no-wrap
 msgid "Overview about the FreeBSD Documentation Process"
 msgstr "Обзор процесса создания документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:1
 #, no-wrap
 msgid "Chapter 1. Overview"
@@ -307,19 +307,9 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:134
-#, fuzzy
-#| msgid ""
-#| "*_Always_* build and review the changes before submitting them. Running "
-#| "`make` in the `documentation` or `website` subdirectories will generate "
-#| "the documentation in HTML format.\n"
-msgid ""
-"*_Always_* build and review the changes before submitting them. Running "
-"`make` in the `documentation` or `website` subdirectories will generate the "
-"documentation in HTML format."
-msgstr ""
-"*_Всегда_* собирайте и проверяйте изменения перед отправкой. Запуск команды "
-"`make` в подкаталогах `documentation` или `website` сгенерирует документацию "
-"в формате HTML.\n"
+#, no-wrap
+msgid "*_Always_* build and review the changes before submitting them. Running `make` in the `documentation` or `website` subdirectories will generate the documentation in HTML format.\n"
+msgstr "*_Всегда_* собирайте и проверяйте изменения перед отправкой. Запуск команды `make` в подкаталогах `documentation` или `website` сгенерирует документацию в формате HTML.\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:138
@@ -460,7 +450,7 @@ msgstr ""
 "проблемы_. Выберите Component `Documentation`. В поле Description введите "
 "краткое описание изменений и любые важные детали о них. Используйте кнопку "
 "btn:[Add an attachment], чтобы прикрепить патч или diff-файл. Наконец, "
-"нажмите кнопку btn:[Submit Bug], чтобы отправить ваш diff в систему отчетов "
+"нажмите кнопку btn:[Submit Bug], чтобы отправить ваш diff в систему отчётов "
 "об ошибках."
 
 #. type: Title ===
@@ -537,7 +527,7 @@ msgstr ""
 "описание проблемы из поля _Summary_ и добавьте _patch_ в поле _Keywords_.  "
 "Используйте кнопку btn:[Add an attachment], чтобы прикрепить патч или diff-"
 "файл.  Наконец, нажмите кнопку btn:[Submit Bug], чтобы отправить ваш diff в "
-"систему отчетов об ошибках."
+"систему отчётов об ошибках."
 
 #. type: Title ===
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:248
@@ -601,8 +591,8 @@ msgstr "$ git clone https://git.FreeBSD.org/doc.git ~/doc\n"
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:294
 #, no-wrap
-msgid "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=$(brew --prefix ruby)/bin/ruby\n"
-msgstr "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=$(brew --prefix ruby)/bin/ruby\n"
+msgid "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=\"$(brew --prefix ruby)/bin/ruby\" HUGO_CMD=\"$(brew --prefix hugo)/bin/hugo\"\n"
+msgstr "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=\"$(brew --prefix ruby)/bin/ruby\" HUGO_CMD=\"$(brew --prefix hugo)/bin/hugo\"\n"
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:329
@@ -695,7 +685,7 @@ msgid ""
 "are also archived at link:{dev-commits-doc-all}."
 msgstr ""
 "Документация сообщений о фиксациях доступна с помощью `git log`.  Сообщения "
-"о фиксациях также архивируются по ссылке:link:{dev-commits-doc-all}."
+"о фиксациях также архивируются по ссылке link:{dev-commits-doc-all}."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/fdp-primer/overview/_index.adoc:349
@@ -715,7 +705,11 @@ msgid ""
 "as much of this external documentation as possible."
 msgstr ""
 "Большое количество авторов участвовало в написании руководств или инструкций "
-"по FreeBSD.  Некоторые из этих документов хранятся в рамках файлов FDP.  В "
-"других случаях авторы предпочли лпубликовать документацию отдельно.  FDP "
+"по FreeBSD. Некоторые из этих документов хранятся в рамках файлов FDP. В "
+"других случаях авторы предпочли опубликовать документацию отдельно. FDP "
 "стремится предоставить ссылки на как можно большее количество такой внешней "
 "документации."
+
+#, no-wrap
+#~ msgid "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=$(brew --prefix ruby)/bin/ruby\n"
+#~ msgstr "$ bmake run USE_RUBYGEMS=YES RUBY_CMD=$(brew --prefix ruby)/bin/ruby\n"
