--- a/documentation/content/ru/books/fdp-primer/po-translations/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/po-translations/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/weblate
 params:
   path: /books/fdp-primer/po-translations/
 prev: books/fdp-primer/translations
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["po", "translations", "tutorial", "quick start"]
 title: 'Глава 9. Переводы PO'
 weight: 9
@@ -87,7 +87,7 @@ endif::[]
 % mkdir ~/doc/documentation/content/es/articles/leap-seconds
 ....
 
-. Скопируйте [.filename]#_index.po# из исходного документа в директорию перевода:
+. Скопируйте [.filename]#_index.po# из исходного документа в каталог перевода:
 +
 [source, shell]
 ....
@@ -226,13 +226,13 @@ endif::[]
 |[.filename]#zh-tw#
 |===
 
-Переводы находятся в поддиректориях основной директории документации, которая в данном случае предполагается как [.filename]#~/doc/documentation/#, как показано в crossref:overview[overview-quick-start, Быстрый старт]. Например, немецкие переводы расположены в [.filename]#~/doc/documentation/content/de/#, а французские — в [.filename]#~/doc/documentation/content/fr/#.
+Переводы находятся в подкаталогах основного каталога документации, который в данном случае предполагается как [.filename]#~/doc/documentation/#, как показано в crossref:overview[overview-quick-start, Быстрый старт]. Например, немецкие переводы расположены в [.filename]#~/doc/documentation/content/de/#, а французские — в [.filename]#~/doc/documentation/content/fr/#.
 
 Каждый языковой каталог содержит отдельные подкаталоги с названиями по типу документов, обычно [.filename]#articles/# и [.filename]#books/#.
 
 Объединение этих имен каталогов дает полный путь к статье или книге. Например, французский перевод статьи NanoBSD находится в [.filename]#~/doc/documentation/content/fr/articles/nanobsd/#, а монгольский перевод Руководства — в [.filename]#~/doc/documentation/content/mn/books/handbook/#.
 
-При переводе документа на новый язык необходимо создать новый языковой каталог. Если языковой каталог уже существует, достаточно создать подкаталог в директории [.filename]#articles/# или [.filename]#books/#.
+При переводе документа на новый язык необходимо создать новый каталог языка. Если каталог языка уже существует, достаточно создать подкаталог в каталоге [.filename]#articles/# или [.filename]#books/#.
 
 [[po-translations-creating-example]]
 .Создание испанского перевода Руководства портировщика
@@ -342,7 +342,7 @@ msgid ""
 
 Подготовьте новые файлы перевода для отправки. Это включает добавление файлов в систему контроля версий, установку дополнительных свойств для них, а затем создание diff-файла для отправки.
 
-Файлы различий, созданные в этих примерах, можно прикрепить к https://bugs.freebsd.org/bugzilla/enter_bug.cgi?product=Documentation[отчету об ошибке в документации] или https://reviews.freebsd.org/[обзору кода].
+Файлы различий, созданные в этих примерах, можно прикрепить к https://bugs.freebsd.org/bugzilla/enter_bug.cgi?product=Documentation[отчёту об ошибке в документации] или https://reviews.freebsd.org/[обзору кода].
 
 [[po-translations-submitting-spanish]]
 .Перевод статьи NanoBSD на испанский язык
