--- a/documentation/content/ru/books/fdp-primer/po-translations/_index.po
+++ b/documentation/content/ru/books/fdp-primer/po-translations/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-06-23 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primerpo-translations_index/ru/>\n"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:1
 #, no-wrap
 msgid "How to work with PO translation in the FreeBSD Documentation Project"
 msgstr "Как работать с переводом PO в проекте документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:1
 #, no-wrap
 msgid "Chapter 9. PO Translations"
@@ -83,8 +83,8 @@ msgid ""
 "This example shows the creation of a Spanish translation of the short extref:"
 "{leap-seconds}[Leap Seconds] article."
 msgstr ""
-"Этот пример демонстрирует создание испанского перевода краткой статьи extref:"
-"{leap-seconds}[Високосные секунды]."
+"Этот пример демонстрирует создание испанского перевода краткой статьи extref"
+":{leap-seconds}[Високосные секунды]."
 
 #. type: Block title
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:71
@@ -138,8 +138,8 @@ msgstr ""
 "находится в [.filename]#~/doc/documentation/content/en/articles/leap-seconds/"
 "#. Испанский перевод будет расположен в [.filename]#~/doc/documentation/"
 "content/es/articles/leap-seconds/#. Путь идентичен, за исключением названия "
-"языкового каталога. Исходный текст статьи на английском находится в "
-"[.filename]#~/doc/en/articles/leap-seconds/#. Испанский перевод будет "
+"языкового каталога. Исходный текст статьи на английском находится в [."
+"filename]#~/doc/en/articles/leap-seconds/#. Испанский перевод будет "
 "расположен в [.filename]#~/doc/es/articles/leap-seconds/#. Путь идентичен, "
 "за исключением названия языкового каталога."
 
@@ -155,8 +155,7 @@ msgid ""
 "Copy the [.filename]#_index.po# from the original document into the "
 "translation directory:"
 msgstr ""
-"Скопируйте [.filename]#_index.po# из исходного документа в директорию "
-"перевода:"
+"Скопируйте [.filename]#_index.po# из исходного документа в каталог перевода:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:103
@@ -249,8 +248,8 @@ msgid ""
 "Check the generated file by rendering it to HTML and viewing it with a web "
 "browser:"
 msgstr ""
-"Проверьте сгенерированный файл, преобразовав его в HTML и просмотрев в веб-"
-"браузере:"
+"Проверьте сгенерированный файл, преобразовав его в HTML и просмотрев в "
+"веб-браузере:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:145
@@ -652,11 +651,11 @@ msgid ""
 "translations are located in [.filename]#~/doc/documentation/content/de/#, "
 "and French translations are in [.filename]#~/doc/documentation/content/fr/#."
 msgstr ""
-"Переводы находятся в поддиректориях основной директории документации, "
-"которая в данном случае предполагается как [.filename]#~/doc/documentation/"
-"#, как показано в crossref:overview[overview-quick-start, Быстрый старт].  "
-"Например, немецкие переводы расположены в [.filename]#~/doc/documentation/"
-"content/de/#, а французские — в [.filename]#~/doc/documentation/content/fr/#."
+"Переводы находятся в подкаталогах основного каталога документации, который в "
+"данном случае предполагается как [.filename]#~/doc/documentation/#, как "
+"показано в crossref:overview[overview-quick-start, Быстрый старт]. Например, "
+"немецкие переводы расположены в [.filename]#~/doc/documentation/content/de/#"
+", а французские — в [.filename]#~/doc/documentation/content/fr/#."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:246
@@ -688,9 +687,9 @@ msgid ""
 "new language.  If the language directory already exists, only a subdirectory "
 "in the [.filename]#articles/# or [.filename]#books/# directory is needed."
 msgstr ""
-"При переводе документа на новый язык необходимо создать новый языковой "
-"каталог. Если языковой каталог уже существует, достаточно создать подкаталог "
-"в директории [.filename]#articles/# или [.filename]#books/#."
+"При переводе документа на новый язык необходимо создать новый каталог языка. "
+"Если каталог языка уже существует, достаточно создать подкаталог в каталоге ["
+".filename]#articles/# или [.filename]#books/#."
 
 #. type: Block title
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:255
@@ -705,8 +704,8 @@ msgid ""
 "Handbook].  The original is a book in [.filename]#~/doc/documentation/"
 "content/en/books/porters-handbook/#."
 msgstr ""
-"Создайте новый перевод на испанский язык extref:{porters-handbook}"
-"[Руководства портировщика]. Оригинал находится в книге [.filename]#~/doc/"
+"Создайте новый перевод на испанский язык extref:{porters-handbook}["
+"Руководства портировщика]. Оригинал находится в книге [.filename]#~/doc/"
 "documentation/content/en/books/porters-handbook/#."
 
 #. type: delimited block = 6
@@ -817,8 +816,8 @@ msgstr ""
 "Перевод документов онлайн оказывается наиболее простым способом перевода "
 "документации в FreeBSD, так как позволяет нескольким пользователям совместно "
 "работать над одним файлом, эффективно распределяя нагрузку.  Для получения "
-"дополнительной информации обратитесь к следующей главе: "
-"crossref:weblate[weblate-introduction,Переводы в Weblate]."
+"дополнительной информации обратитесь к следующей главе: crossref:weblate"
+"[weblate-introduction,Переводы в Weblate]."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:308
@@ -869,7 +868,8 @@ msgid ""
 "\"extref:{leap-seconds}[Leap Seconds].\"\n"
 msgstr ""
 "msgid \"\"\n"
-"\"Este ejemplo muestra la creación de un artículo con poco contenido como el artículo \"\n"
+"\"Este ejemplo muestra la creación de un artículo con poco contenido como el "
+"artículo \"\n"
 "\"extref:{leap-seconds}[Leap Seconds].\"\n"
 
 #. type: Title ===
@@ -1000,9 +1000,9 @@ msgid ""
 "bugs.freebsd.org/bugzilla/enter_bug.cgi?product=Documentation[documentation "
 "bug report] or https://reviews.freebsd.org/[code review]."
 msgstr ""
-"Файлы различий, созданные в этих примерах, можно прикрепить к https://"
-"bugs.freebsd.org/bugzilla/enter_bug.cgi?product=Documentation[отчету об "
-"ошибке в документации] или https://reviews.freebsd.org/[обзору кода]."
+"Файлы различий, созданные в этих примерах, можно прикрепить к https://bugs."
+"freebsd.org/bugzilla/enter_bug.cgi?product=Documentation[отчёту об ошибке в "
+"документации] или https://reviews.freebsd.org/[обзору кода]."
 
 #. type: Block title
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:378
@@ -1029,7 +1029,8 @@ msgid ""
 "% git diff documentation/content/es/articles/nanobsd/ > /tmp/es_nanobsd.diff\n"
 msgstr ""
 "% cd ~/doc\n"
-"% git diff documentation/content/es/articles/nanobsd/ > /tmp/es_nanobsd.diff\n"
+"% git diff documentation/content/es/articles/nanobsd/ > /tmp/es_nanobsd."
+"diff\n"
 
 #. type: delimited block = 6
 #: documentation/content/en/books/fdp-primer/po-translations/_index.adoc:394
