--- a/documentation/content/ru/books/fdp-primer/preface/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/preface/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/overview
 params:
   path: /books/fdp-primer/preface/
 prev: books/fdp-primer
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["preface", "prompts", "conventions"]
 title: Предисловие
 weight: 1
