--- a/documentation/content/ru/books/fdp-primer/rosetta/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/rosetta/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/translations
 params:
   path: /books/fdp-primer/rosetta/
 prev: books/fdp-primer/asciidoctor-primer
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["rosetta", "docbook", "asciidoc", "comparison"]
 title: 'Глава 7. Розеттский камень'
 weight: 8
