--- a/documentation/content/ru/books/fdp-primer/see-also/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/see-also/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/examples
 params:
   path: /books/fdp-primer/see-also/
 prev: books/fdp-primer/trademarks/
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["additional information", "AsciiDoctor", "HTML"]
 title: 'Глава 15. Смотрите также'
 weight: 15
