--- a/documentation/content/ru/books/fdp-primer/structure/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/structure/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/doc-build
 params:
   path: /books/fdp-primer/structure/
 prev: books/fdp-primer/working-copy
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["directory structure", "organization"]
 title: 'Глава 4. Структура каталогов документации'
 weight: 5
@@ -159,7 +159,7 @@ endif::[]
 [[structure-document-books-physical]]
 === Физическая организация
 
-В каталоге books находится множество файлов и директорий, все с одинаковой структурой.
+В каталоге books находится множество файлов и каталогов, все с одинаковой структурой.
 
 [[structure-document-books-physical-index]]
 ==== _index.adoc
@@ -310,7 +310,7 @@ include-contrib-386bsd:         [.filename]#~/doc/shared/contrib-386bsd.adoc#
 | *Разработчики FreeBSD* | include-contrib-committers | [.filename]#contrib-committers.adoc# | упорядочено по алфавиту по фамилии
 | *Бывшие члены основной команды* | include-contrib-corealumni | [.filename]#contrib-corealumni.adoc# | приблизительно в обратном хронологическом порядке
 | *Бывшие члены команды разработчиков* | include-contrib-develalumni | [.filename]#contrib-develalumni.adoc# | приблизительно в обратном хронологическом порядке
-| *Бывшие члены команды управления портами* | include::contrib-portmgralumni | [.filename]#contrib-portmgralumni.adoc# | приблизительно в обратном хронологическом порядке
+| *Бывшие члены команды управления портами* | include-contrib-portmgralumni | [.filename]#contrib-portmgralumni.adoc# | приблизительно в обратном хронологическом порядке
 | *Дополнительные участники проекта FreeBSD* | include-contrib-additional | [.filename]#contrib-additional.adoc# | упорядочено по алфавиту по имени
 | *Участники, предоставившие патчи для 386BSD Patch Kit* | include-contrib-386bsd | [.filename]#contrib-386bsd.adoc# | упорядочено по алфавиту по имени
 | *Участники проекта центрального сервера* | Файл include не используется | [.filename]#contributors/_index.adoc# | неупорядоченное
@@ -350,7 +350,7 @@ include-contrib-386bsd:         [.filename]#~/doc/shared/contrib-386bsd.adoc#
 +
 . Поскольку участник скончался (что следует перепроверить), добавьте его в файл [.filename]#contrib-develinmemoriam.adoc# "Памяти ушедших".
 +
-Постарайтесь найти информацию, подкрепленную фактами, о его вкладе в FreeBSD за прошедшие годы и добавьте её к записи в файле. Для этого может потребоваться запрос в списках рассылки разработчиков, обращение к коллегам, связь с FreeBSD Foundation или поиск в журналах коммитов.
+Постарайтесь найти информацию, подкрепленную фактами, о его вкладе в FreeBSD за прошедшие годы и добавьте её к записи в файле. Для этого может потребоваться запрос в списках рассылки разработчиков, обращение к коллегам, связь с Фондом FreeBSD или поиск в журналах коммитов.
 +
 Чтобы узнать дату их первого коммита, используйте:
 +
