--- a/documentation/content/ru/books/fdp-primer/tools/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/tools/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/working-copy
 params:
   path: /books/fdp-primer/tools/
 prev: books/fdp-primer/overview
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["tools", "required tools", "optional tools"]
 title: 'Глава 2. Инструменты'
 weight: 3
