--- a/documentation/content/ru/books/fdp-primer/tools/_index.po
+++ b/documentation/content/ru/books/fdp-primer/tools/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-06-01 09:10+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/tools/_index.adoc:1
 #, no-wrap
 msgid "Tools used in the FreeBSD Documentation Project"
 msgstr "Инструменты, используемые в проекте документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/tools/_index.adoc:1
 #, no-wrap
 msgid "Chapter 2. Tools"
@@ -65,10 +65,10 @@ msgid ""
 "required to do useful work with the FreeBSD documentation.  Some further "
 "notes on particular components are given below."
 msgstr ""
-"Установите `docproj` _мета-порт_, как показано в "
-"crossref:overview[overview,обзорной главе] из Коллекции портов. Эти "
-"приложения необходимы для работы с документацией FreeBSD. Далее приведены "
-"дополнительные заметки об отдельных компонентах."
+"Установите `docproj` _мета-порт_, как показано в crossref:overview["
+"overview,обзорной главе] из Коллекции портов. Эти приложения необходимы для "
+"работы с документацией FreeBSD. Далее приведены дополнительные заметки об "
+"отдельных компонентах."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/tools/_index.adoc:63
