--- a/documentation/content/ru/books/fdp-primer/trademarks/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/trademarks/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/see-also
 params:
   path: /books/fdp-primer/trademarks/
 prev: books/fdp-primer/editor-config/
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["trademarks", "AsciiDoctor", "HTML"]
 title: 'Глава 14. Товарные знаки'
 weight: 14
