--- a/documentation/content/ru/books/fdp-primer/translations/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/translations/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/po-translations
 params:
   path: /books/fdp-primer/translations/
 prev: books/fdp-primer/rosetta
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["FAQ", "i18n", "i10n", "translation"]
 title: 'Глава 8. Переводы'
 weight: 9
@@ -167,7 +167,7 @@ documentation/
 
 Кто-то (скорее всего, руководитель проекта документации, в настоящее время {doceng}) проверит ваш перевод и убедится, что он собирается. В частности, будут проверены следующие моменты:
 
-. Работает ли `make` в директории [.filename]#root# корректно?
+. Работает ли `make` в каталоге [.filename]#root# корректно?
 
 Если возникнут проблемы, тот, кто будет рассматривать вашу заявку, свяжется с вами для их решения.
 
