--- a/documentation/content/ru/books/fdp-primer/translations/_index.po
+++ b/documentation/content/ru/books/fdp-primer/translations/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-08-19 04:45+0000\n"
+"POT-Creation-Date: 2025-08-17 20:54+0100\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primertranslations_index/ru/>\n"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:1
 #, no-wrap
 msgid "FAQ about the translation process in the FreeBSD Documentation Project"
 msgstr "Часто задаваемые вопросы о процессе перевода в проекте документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:1
 #, no-wrap
 msgid "Chapter 8. Translations"
@@ -49,15 +49,15 @@ msgstr ""
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:56
 msgid ""
 "It is _very_ heavily based on the translation FAQ from the FreeBSD German "
-"Documentation Project, originally written by Frank Gründer "
-"mailto:elwood@mc5sys.in-berlin.de[elwood@mc5sys.in-berlin.de] and translated "
-"back to English by Bernd Warken mailto:bwarken@mayn.de[bwarken@mayn.de]."
+"Documentation Project, originally written by Frank Gründer mailto:"
+"elwood@mc5sys.in-berlin.de[elwood@mc5sys.in-berlin.de] and translated back "
+"to English by Bernd Warken mailto:bwarken@mayn.de[bwarken@mayn.de]."
 msgstr ""
 "Он _очень_ сильно основан на FAQ по переводу из Немецкого проекта "
-"документации FreeBSD, изначально написанном Франком Грюндером "
-"mailto:elwood@mc5sys.in-berlin.de[elwood@mc5sys.in-berlin.de] и переведённом "
-"обратно на английский Берндом Варкеном "
-"mailto:bwarken@mayn.de[bwarken@mayn.de]."
+"документации FreeBSD, изначально написанном Франком Грюндером mailto:"
+"elwood@mc5sys.in-berlin.de[elwood@mc5sys.in-berlin.de] и переведённом "
+"обратно на английский Берндом Варкеном mailto:bwarken@mayn.de[bwarken@mayn."
+"de]."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:57
@@ -95,16 +95,15 @@ msgid ""
 "Yes. Different translation groups have their own mailing lists.  The https://"
 "www.freebsd.org/docproj/translations[list of translation projects] has more "
 "information about the mailing lists and web sites run by each translation "
-"project.  In addition there is mailto:freebsd-"
-"translators@freebsd.org[freebsd-translators@freebsd.org] for general "
-"translation discussion."
+"project.  In addition there is mailto:freebsd-translators@freebsd."
+"org[freebsd-translators@freebsd.org] for general translation discussion."
 msgstr ""
 "Да. Различные группы переводчиков имеют свои собственные списки рассылки. В "
 "https://www.freebsd.org/docproj/translations[списке проектов перевода] есть "
 "дополнительная информация о списках рассылки и веб-сайтах, которые "
-"поддерживаются каждым проектом перевода.  Кроме того, существует "
-"mailto:freebsd-translators@freebsd.org[freebsd-translators@freebsd.org] для "
-"общих обсуждений, связанных с переводом."
+"поддерживаются каждым проектом перевода.  Кроме того, существует mailto:"
+"freebsd-translators@freebsd.org[freebsd-translators@freebsd.org] для общих "
+"обсуждений, связанных с переводом."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:71
@@ -385,14 +384,14 @@ msgstr ""
 msgid ""
 "Currently, the FreeBSD documentation is stored in a top level directory "
 "called [.filename]#documentation/#.  Directories below this are named "
-"according to the language code they are written in, as defined in ISO639 "
-"([.filename]#/usr/share/misc/iso639# on a version of FreeBSD newer than 20th "
+"according to the language code they are written in, as defined in ISO639 ([."
+"filename]#/usr/share/misc/iso639# on a version of FreeBSD newer than 20th "
 "January 1999)."
 msgstr ""
 "В настоящее время документация FreeBSD хранится в корневом каталоге с "
 "названием [.filename]#documentation/#. Каталоги ниже него именуются согласно "
-"языковым кодам, на которых они написаны, как определено в ISO639 "
-"([.filename]#/usr/share/misc/iso639# в версии FreeBSD новее 20 января 1999 "
+"языковым кодам, на которых они написаны, как определено в ISO639 ([."
+"filename]#/usr/share/misc/iso639# в версии FreeBSD новее 20 января 1999 "
 "года)."
 
 #. type: Plain text
@@ -461,11 +460,11 @@ msgstr "% git diff > sv-faq.diff\n"
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:188
 msgid ""
-"You should use Bugzilla to link:https://bugs.freebsd.org/bugzilla/"
-"enter_bug.cgi[submit a report] indicating that you have submitted the "
-"documentation.  It would be very helpful if you could get other people to "
-"look over your translation and double check it first, since it is unlikely "
-"that the person committing it will be fluent in the language."
+"You should use Bugzilla to link:https://bugs.freebsd.org/bugzilla/enter_bug."
+"cgi[submit a report] indicating that you have submitted the documentation.  "
+"It would be very helpful if you could get other people to look over your "
+"translation and double check it first, since it is unlikely that the person "
+"committing it will be fluent in the language."
 msgstr ""
 "Вы должны использовать Bugzilla, чтобы link:https://bugs.freebsd.org/"
 "bugzilla/enter_bug.cgi[отправить отчёт], указав, что вы предоставили "
@@ -487,7 +486,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:193
 msgid "Does `make` in the [.filename]#root# directory work correctly?"
-msgstr "Работает ли `make` в директории [.filename]#root# корректно?"
+msgstr "Работает ли `make` в каталоге [.filename]#root# корректно?"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/translations/_index.adoc:195
@@ -633,8 +632,8 @@ msgid ""
 "`$FreeBSD$`) for new files."
 msgstr ""
 "Точный шаблон может меняться, но он всегда будет включать строку `$FreeBSD$` "
-"и фразу `The FreeBSD Documentation Project`. Обратите внимание, что часть "
-"`$FreeBSD$` автоматически раскрывается Git, поэтому для новых файлов она "
+"и фразу `The FreeBSD Documentation Project`. Обратите внимание, что часть `"
+"$FreeBSD$` автоматически раскрывается Git, поэтому для новых файлов она "
 "должна быть пустой (просто `$FreeBSD$`)."
 
 #. type: Plain text
