--- a/documentation/content/ru/books/fdp-primer/weblate/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/weblate/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/manual-pages
 params:
   path: /books/fdp-primer/weblate/
 prev: books/fdp-primer/po-translations
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["weblate", "po", "translations", "tutorial", "quick start"]
 title: 'Глава 10. Переводы в Weblate'
 weight: 10
@@ -246,7 +246,7 @@ image::weblate-revision2.png["Weblate Ревизия 02", 800]
 % ./tools/translate.sh documentation es articles/committers-guide
 ....
 
-По умолчанию: только файлы с более чем восьмидесятью процентами переведённых строк будут преобразованы в `.adoc`.
+По умолчанию: только файлы с более чем восемьюдесятью процентами переведённых строк будут преобразованы в `.adoc`.
 
 Чтобы игнорировать это ограничение:
 
@@ -333,7 +333,7 @@ image::weblate-revision2.png["Weblate Ревизия 02", 800]
 ====
 .Проверка репозитория
 
-После выполнения шагов из раздела crossref:weblate[weblate-building,Сборка переведенного документа], перейдите в корневую директорию `freebsd-doc` и просмотрите, что будет включено в коммит. Для просмотра списка изменяемых файлов и различий в их содержимом:
+После выполнения шагов из раздела crossref:weblate[weblate-building,Сборка переведенного документа], перейдите в корневой каталог `freebsd-doc` и просмотрите, что будет включено в коммит. Для просмотра списка изменяемых файлов и различий в их содержимом:
 
 [source, console?prompt=%]
 ....
