--- a/documentation/content/ru/books/fdp-primer/weblate/_index.po
+++ b/documentation/content/ru/books/fdp-primer/weblate/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primerweblate_index/ru/>\n"
@@ -18,13 +18,15 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:1
 #, no-wrap
 msgid "How to join the FreeBSD translators team and translate online on Weblate"
-msgstr "Как присоединиться к команде переводчиков FreeBSD и переводить онлайн в Weblate"
+msgstr ""
+"Как присоединиться к команде переводчиков FreeBSD и переводить онлайн в "
+"Weblate"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:1
 #, no-wrap
 msgid "Chapter 10. Weblate Translations"
@@ -144,10 +146,10 @@ msgid ""
 "copyright/freebsd-doc-license/[The FreeBSD Documentation License]; if this "
 "is unacceptable, please do not sign up or send any patches or translations."
 msgstr ""
-"Все файлы переводов и документы должны соответствовать https://"
-"www.freebsd.org/copyright/freebsd-doc-license/[Лицензии документации "
-"FreeBSD]; если это неприемлемо, пожалуйста, не регистрируйтесь и не "
-"присылайте никаких исправлений или переводов."
+"Все файлы переводов и документы должны соответствовать https://www.freebsd."
+"org/copyright/freebsd-doc-license/[Лицензии документации FreeBSD]; если это "
+"неприемлемо, пожалуйста, не регистрируйтесь и не присылайте никаких "
+"исправлений или переводов."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:83
@@ -201,8 +203,10 @@ msgstr ""
 "Language:  Language to translate (essential)\n"
 "Profession or student status: (optional)\n"
 "About You: (free format -- info which you feel comfortable sharing with\n"
-"  others: company, school, other affiliation, historical qualifications, other\n"
-"  projects you have worked on, level and type of computer skills, other relevant skills,\n"
+"  others: company, school, other affiliation, historical qualifications, "
+"other\n"
+"  projects you have worked on, level and type of computer skills, other "
+"relevant skills,\n"
 "  etc.)\n"
 "You and the FreeBSD Project: (free format: other FreeBSD projects of\n"
 "  interest, comments, etc.)\n"
@@ -259,14 +263,14 @@ msgid ""
 "doc/pulls[GitHub] to get the translated document published or updated in the "
 "documentation portal.  See more in the following sections."
 msgstr ""
-"На экземпляре Weblate FreeBSD все переводы будут зафиксированы в https://"
-"github.com/freebsd/freebsd-doc-translate[freebsd-doc-translate] "
-"(промежуточном репозитории на GitHub), а не напрямую в https://github.com/"
+"На экземпляре Weblate FreeBSD все переводы будут зафиксированы в "
+"https://github.com/freebsd/freebsd-doc-translate[freebsd-doc-translate] ("
+"промежуточном репозитории на GitHub), а не напрямую в https://github.com/"
 "freebsd/freebsd-doc[freebsd-doc].  Переводчики должны брать файлы PO gettext "
-"(`.po`), преобразовывать их в `.adoc` и отправлять через https://"
-"bugs.freebsd.org/bugzilla/[Bugzilla] или https://github.com/freebsd/freebsd-"
-"doc/pulls[GitHub], чтобы переведённый документ был опубликован или обновлён "
-"в портале документации.  Подробнее см. в следующих разделах."
+"(`.po`), преобразовывать их в `.adoc` и отправлять через https://bugs.freebsd"
+".org/bugzilla/[Bugzilla] или https://github.com/freebsd/freebsd-doc/"
+"pulls[GitHub], чтобы переведённый документ был опубликован или обновлён в "
+"портале документации.  Подробнее см. в следующих разделах."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:124
@@ -645,7 +649,9 @@ msgstr "Клонирование репозитория `freebsd-doc-translate`:
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:232
 #, no-wrap
 msgid "% git clone https://github.com/freebsd/freebsd-doc-translate.git ~/freebsd-doc-translate\n"
-msgstr "% git clone https://github.com/freebsd/freebsd-doc-translate.git ~/freebsd-doc-translate\n"
+msgstr ""
+"% git clone https://github.com/freebsd/freebsd-doc-translate.git ~/freebsd-"
+"doc-translate\n"
 
 #. type: Block title
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:239
@@ -671,7 +677,8 @@ msgid ""
 "% cp ~/freebsd-doc-translate/documentation/content/es/articles/committers-guide/_index.po \\\n"
 "~/freebsd-doc/documentation/content/es/articles/committers-guide/\n"
 msgstr ""
-"% cp ~/freebsd-doc-translate/documentation/content/es/articles/committers-guide/_index.po \\\n"
+"% cp ~/freebsd-doc-translate/documentation/content/es/articles/"
+"committers-guide/_index.po \\\n"
 "~/freebsd-doc/documentation/content/es/articles/committers-guide/\n"
 
 #. type: Block title
@@ -708,8 +715,8 @@ msgid ""
 "By default: only files with more than eighty percent of strings translated "
 "will be converted to `.adoc`."
 msgstr ""
-"По умолчанию: только файлы с более чем восьмидесятью процентами переведённых "
-"строк будут преобразованы в `.adoc`."
+"По умолчанию: только файлы с более чем восемьюдесятью процентами "
+"переведённых строк будут преобразованы в `.adoc`."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:274
@@ -720,7 +727,9 @@ msgstr "Чтобы игнорировать это ограничение:"
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:278
 #, no-wrap
 msgid "% KEEP_ENV=0 ./tools/translate.sh documentation es articles/committers-guide\n"
-msgstr "% KEEP_ENV=0 ./tools/translate.sh documentation es articles/committers-guide\n"
+msgstr ""
+"% KEEP_ENV=0 ./tools/translate.sh documentation es articles/committers-"
+"guide\n"
 
 #. type: delimited block = 4
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:285
@@ -936,7 +945,7 @@ msgid ""
 "file content:"
 msgstr ""
 "После выполнения шагов из раздела crossref:weblate[weblate-building,Сборка "
-"переведенного документа], перейдите в корневую директорию `freebsd-doc` и "
+"переведенного документа], перейдите в корневой каталог `freebsd-doc` и "
 "просмотрите, что будет включено в коммит. Для просмотра списка изменяемых "
 "файлов и различий в их содержимом:"
 
@@ -1093,9 +1102,9 @@ msgid ""
 "XXXXXXX.patch# to a problem report in https://bugs.freebsd.org/bugzilla/"
 "[FreeBSD Bugzilla]."
 msgstr ""
-"Прикрепите патч [.filename]#0001-pt-br-committers-guide-Sync-with-en-"
-"XXXXXXX.patch# к отчёту об ошибке в https://bugs.freebsd.org/bugzilla/"
-"[FreeBSD Bugzilla]."
+"Прикрепите патч [.filename]#0001-pt-br-committers-guide-Sync-with-en-XXXXXXX."
+"patch# к отчёту об ошибке в https://bugs.freebsd.org/bugzilla/[FreeBSD "
+"Bugzilla]."
 
 #. type: delimited block = 4
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:445
@@ -1169,7 +1178,8 @@ msgid ""
 "State that instructions in this guide were followed, including proofreading and other necessary steps.\n"
 "Include things that may help with triage and progression of the report."
 msgstr ""
-"Укажите, что инструкции в этом руководстве были выполнены, включая вычитку и другие необходимые шаги.\n"
+"Укажите, что инструкции в этом руководстве были выполнены, включая вычитку и "
+"другие необходимые шаги.\n"
 "Включите сведения, которые могут помочь с анализом и продвижением отчёта."
 
 #. type: Table
@@ -1182,7 +1192,9 @@ msgstr "*СС* (Необязательно)"
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:469
 #, no-wrap
 msgid "If the language has coordinators, include their email addresses in the CC field."
-msgstr "Если в языке есть координаторы, укажите их адреса электронной почты в поле CC."
+msgstr ""
+"Если в языке есть координаторы, укажите их адреса электронной почты в поле "
+"CC."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:472
@@ -1193,9 +1205,10 @@ msgid ""
 "the name and address that you use with Weblate)."
 msgstr ""
 "Для тех, кто знаком с man:git[1] и GitHub: вместо отправки исправления через "
-"https://bugs.freebsd.org/bugzilla/[Bugzilla], можно использовать https://"
-"github.com/freebsd/freebsd-doc/pulls[запрос на включение изменений (pull "
-"request) в GitHub] (укажите имя и адрес, которые вы используете в Weblate)."
+"https://bugs.freebsd.org/bugzilla/[Bugzilla], можно использовать "
+"https://github.com/freebsd/freebsd-doc/pulls[запрос на включение изменений ("
+"pull request) в GitHub] (укажите имя и адрес, которые вы используете в "
+"Weblate)."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/weblate/_index.adoc:475
@@ -1216,8 +1229,8 @@ msgid ""
 "associated perks."
 msgstr ""
 "Когда переводчики продолжают присылать качественные исправления, другие "
-"коммиттеры могут выдвинуть их для получения прав на запись (extref:"
-"{committers-guide}[бит коммита для документации, committer.types] для "
+"коммиттеры могут выдвинуть их для получения прав на запись (extref"
+":{committers-guide}[бит коммита для документации, committer.types] для "
 "переводов), учётной записи FreeBSD и сопутствующих привилегий."
 
 #. type: Plain text
