--- a/documentation/content/ru/books/fdp-primer/working-copy/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/working-copy/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/structure
 params:
   path: /books/fdp-primer/working-copy/
 prev: books/fdp-primer/tools
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["working copy", "documentation", "manual pages", "git"]
 title: 'Глава 3. Рабочая копия'
 weight: 4
