--- a/documentation/content/ru/books/fdp-primer/working-copy/_index.po
+++ b/documentation/content/ru/books/fdp-primer/working-copy/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-06-01 10:10+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/working-copy/_index.adoc:1
 #, no-wrap
 msgid "How to get a working copy of the FreeBSD Documentation Project"
 msgstr "Как получить рабочую копию проекта документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/working-copy/_index.adoc:1
 #, no-wrap
 msgid "Chapter 3. The Working Copy"
@@ -129,8 +129,8 @@ msgstr ""
 "исходный код системы с руководствами — в [.filename]#/usr/src/#.  Эти "
 "деревья каталогов могут быть перемещены, и пользователи могут разместить "
 "рабочие копии в других местах, чтобы избежать конфликтов с существующей "
-"информацией в основных каталогах.  В следующих примерах используются "
-"[.filename]#~/doc# и [.filename]#~/src# — подкаталоги домашнего каталога "
+"информацией в основных каталогах.  В следующих примерах используются [."
+"filename]#~/doc# и [.filename]#~/src# — подкаталоги домашнего каталога "
 "пользователя."
 
 #. type: Title ==
@@ -234,9 +234,9 @@ msgid ""
 "[.filename]#_index.adoc# and reset it to unmodified form:"
 msgstr ""
 "Иногда оказывается, что изменения были не нужны, или автор просто хочет "
-"начать заново. Файлы можно «сбросить» к их исходному состоянию с помощью "
-"`git restore`.  Например, чтобы отменить правки, сделанные в "
-"[.filename]#_index.adoc#, и вернуть его в исходное состояние:"
+"начать заново. Файлы можно «сбросить» к их исходному состоянию с помощью `"
+"git restore`.  Например, чтобы отменить правки, сделанные в [."
+"filename]#_index.adoc#, и вернуть его в исходное состояние:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/working-copy/_index.adoc:129
@@ -290,8 +290,8 @@ msgid ""
 "interface, add a [.filename]#.txt# extension to give the earnest and simple-"
 "minded web form a clue that the contents are plain text."
 msgstr ""
-"Если файл с различиями должен быть отправлен через веб-интерфейс "
-"\"link:https://bugs.FreeBSD.org/bugzilla/enter_bug.cgi[Сообщить о проблеме в "
+"Если файл с различиями должен быть отправлен через веб-интерфейс \"link"
+":https://bugs.FreeBSD.org/bugzilla/enter_bug.cgi[Сообщить о проблеме в "
 "FreeBSD]\", добавьте расширение [.filename]#.txt#, чтобы дать простой и "
 "прямолинейной веб-форме понять, что содержимое представляет собой обычный "
 "текст."
@@ -332,5 +332,5 @@ msgid ""
 "doc[Git documentation]."
 msgstr ""
 "Эти примеры демонстрируют базовое использование Git.  Более подробная "
-"информация доступна в https://git-scm.com/book/en/v2[Книге по Git] и https://"
-"git-scm.com/doc[документации Git]."
+"информация доступна в https://git-scm.com/book/en/v2[Книге по Git] и https"
+"://git-scm.com/doc[документации Git]."
