--- a/documentation/content/ru/books/fdp-primer/writing-style/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/writing-style/_index.adoc
@@ -4,7 +4,7 @@ next: books/fdp-primer/editor-config
 params:
   path: /books/fdp-primer/writing-style/
 prev: books/fdp-primer/manual-pages
-showBookMenu: true
+showBookMenu: 'true'
 tags: ["writing", "style", "typos", "one sentence per line"]
 title: 'Глава 12. Стиль написания'
 weight: 12
@@ -268,19 +268,19 @@ They are endowed with reason and conscience and should act towards one another i
 [[writing-style-linting-vale-rules]]
 === Текущие правила Vale
 
-. FreeBSD.BrandTerms: В соответствии с правилами авторского права The FreeBSD Foundation, *freebsd* следует писать как *FreeBSD*. Аналогично, у каждого крупного поставщика и компании есть свои правила написания их торговых марок и брендов. Следует проявлять уважение к брендам других и уделять время правильному написанию PostgreSQL, Node.js, Let's Encrypt и т. д. Отсутствующие названия брендов следует добавлять в файл [.filename]#.vale/styles/FreeBSD/BrandTerms.yml# в репозитории `doc`.
+. FreeBSD.BrandTerms: В соответствии с правилами авторского права Фонда FreeBSD, *freebsd* следует писать как *FreeBSD*. Аналогично, у каждого крупного поставщика и компании есть свои правила написания их торговых марок и брендов. Следует проявлять уважение к брендам других и уделять время правильному написанию PostgreSQL, Node.js, Let's Encrypt и т. д. Отсутствующие названия брендов следует добавлять в файл [.filename]#.vale/styles/FreeBSD/BrandTerms.yml# в репозитории `doc`.
 
 . FreeBSD.ConsciousLanguage: Это правило предлагает использовать осознанный язык, чтобы по возможности избегать чувствительных слов, указывающих на цвет кожи, возраст, расу или сексуальную ориентацию людей.
 
-. FreeBSD.Сокращения: Не следует использовать сокращенные слова. Это правило исключает все сокращения и рекомендует использовать полные слова.
+. FreeBSD.Contractions: Не следует использовать сокращенные слова. Это правило исключает все сокращения и рекомендует использовать полные слова.
 
 . FreeBSD.EOLSpacing: В большинстве документов присутствуют пробелы в конце строк, что не является желательной ситуацией.
 
 . FreeBSD.Hang: Термин `Hang` часто используется для обозначения ситуации, когда приложение перестает отвечать. Это правило предлагает более подходящую формулировку.
 
-. FreeBSD.Дефисы: Часто наречия, оканчивающиеся на 'ly', добавляются с дефисом, что является ошибкой.
+. FreeBSD.Hyphens: Часто наречия, оканчивающиеся на 'ly', добавляются с дефисом, что является ошибкой.
 
-. FreeBSD.Расстояние: Часто двойные пробелы трудно заметить невооруженным глазом, и здесь это решается.
+. FreeBSD.Spacing: Часто двойные пробелы трудно заметить невооруженным глазом, и здесь это решается.
 
 . FreeBSD.SuperfluousOptArgInLinks: Рекомендуется оставлять квадратные скобки пустыми в макросах `link:`, если отображаемый текст совпадает с URL.
 
