--- a/documentation/content/ru/books/fdp-primer/writing-style/_index.po
+++ b/documentation/content/ru/books/fdp-primer/writing-style/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-09-09 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"PO-Revision-Date: 2025-11-08 16:33+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primerwriting-style_index/ru/>\n"
@@ -18,13 +18,15 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:1
 #, no-wrap
 msgid "Writing Style and some conventions used in the FreeBSD Documentation Project"
-msgstr "Стиль написания и некоторые соглашения, используемые в проекте документации FreeBSD"
+msgstr ""
+"Стиль написания и некоторые соглашения, используемые в проекте документации "
+"FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:1
 #, no-wrap
 msgid "Chapter 12. Writing Style"
@@ -106,8 +108,8 @@ msgid ""
 "copy the file to [.filename]#/tmp#\"."
 msgstr ""
 "Следует писать в формальном стиле. Необходимо избегать прямого обращения к "
-"читателю. Например, следует использовать формулировку \"скопировать файл в "
-"[.filename]#/tmp#\", а не \"вы можете скопировать файл в [.filename]#/tmp#\"."
+"читателю. Например, следует использовать формулировку \"скопировать файл в [."
+"filename]#/tmp#\", а не \"вы можете скопировать файл в [.filename]#/tmp#\"."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:85
@@ -184,9 +186,9 @@ msgid ""
 "section."
 msgstr ""
 "Хотя функции должны быть описаны полностью, иногда информации так много, что "
-"читателю сложно найти нужную деталь.  Баланс между полнотой и лаконичностью "
-"— это непростая задача.  Один из подходов — включить введение, затем раздел "
-"«быстрый старт» с описанием наиболее распространённого сценария,  а после "
+"читателю сложно найти нужную деталь.  Баланс между полнотой и лаконичностью —"
+" это непростая задача.  Один из подходов — включить введение, затем раздел «"
+"быстрый старт» с описанием наиболее распространённого сценария,  а после "
 "него — подробный справочный раздел."
 
 #. type: Title ==
@@ -379,8 +381,8 @@ msgid ""
 "For more information about writing style, see http://www.bartleby.com/141/"
 "[Elements of Style] by William Strunk."
 msgstr ""
-"Для получения дополнительной информации о стиле написания текстов см. http://"
-"www.bartleby.com/141/[«Элементы стиля»] Уильяма Странка."
+"Для получения дополнительной информации о стиле написания текстов см. "
+"http://www.bartleby.com/141/[«Элементы стиля»] Уильяма Странка."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:167
@@ -414,8 +416,8 @@ msgstr ""
 "Используйте семантические разрывы строк в документации, метод, называемый "
 "\"одно предложение на строку\".    Идея этого метода заключается в том, "
 "чтобы помочь пользователям писать и читать документацию.    Для получения "
-"дополнительной информации об этом методе прочитайте страницу https://"
-"sembr.org/[Semantic Line Breaks]."
+"дополнительной информации об этом методе прочитайте страницу https://sembr."
+"org/[Semantic Line Breaks]."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:179
@@ -426,7 +428,10 @@ msgstr "Это пример, который не использует \"одно
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:182
 #, no-wrap
 msgid "All human beings are born free and equal in dignity and rights. They are endowed with reason and conscience and should act towards one another in a spirit of brotherhood.\n"
-msgstr "All human beings are born free and equal in dignity and rights. They are endowed with reason and conscience and should act towards one another in a spirit of brotherhood.\n"
+msgstr ""
+"All human beings are born free and equal in dignity and rights. They are "
+"endowed with reason and conscience and should act towards one another in a "
+"spirit of brotherhood.\n"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:185
@@ -441,7 +446,8 @@ msgid ""
 "They are endowed with reason and conscience and should act towards one another in a spirit of brotherhood.\n"
 msgstr ""
 "All human beings are born free and equal in dignity and rights.\n"
-"They are endowed with reason and conscience and should act towards one another in a spirit of brotherhood.\n"
+"They are endowed with reason and conscience and should act towards one "
+"another in a spirit of brotherhood.\n"
 
 #. type: Title ===
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:192
@@ -457,8 +463,8 @@ msgid ""
 "the acronym alone unless it makes more sense contextually to use the whole "
 "term.  Acronyms are usually defined only once per chapter or per document."
 msgstr ""
-"Акроним должен быть определён при первом упоминании в документе, например: "
-"«Network Time Protocol (NTP)». После того как акроним определён, используйте "
+"Акроним должен быть определён при первом упоминании в документе, например: «"
+"Network Time Protocol (NTP)». После того как акроним определён, используйте "
 "только акроним, если контекст не требует полного термина. Обычно акроним "
 "определяется один раз в главе или документе."
 
@@ -682,8 +688,8 @@ msgid ""
 "pipelines, and integrated into an editor of choice."
 msgstr ""
 "Для обеспечения ясности и единообразия во всей документации и на страницах "
-"веб-сайта в дерево документации были добавлены стили link:https://"
-"vale.sh[Vale].  link:https://vale.sh[Vale] — это мощный линтер для создания "
+"веб-сайта в дерево документации были добавлены стили link:https://vale."
+"sh[Vale].  link:https://vale.sh[Vale] — это мощный линтер для создания "
 "пользовательских правил написания текста, который можно использовать в "
 "различных сценариях.  В настоящее время link:https://vale.sh[Vale] можно "
 "применять как инструмент командной строки, в CI/CD-процессах и интегрировать "
@@ -820,8 +826,8 @@ msgid ""
 "Missing brand names should be added to the [.filename]#.vale/styles/FreeBSD/"
 "BrandTerms.yml# in the `doc` repository."
 msgstr ""
-"FreeBSD.BrandTerms: В соответствии с правилами авторского права The FreeBSD "
-"Foundation, *freebsd* следует писать как *FreeBSD*.   Аналогично, у каждого "
+"FreeBSD.BrandTerms: В соответствии с правилами авторского права Фонда "
+"FreeBSD, *freebsd* следует писать как *FreeBSD*.   Аналогично, у каждого "
 "крупного поставщика и компании есть свои правила написания их торговых марок "
 "и брендов.  Следует проявлять уважение к брендам других и уделять время "
 "правильному написанию PostgreSQL, Node.js, Let's Encrypt и т. д.  "
@@ -845,8 +851,8 @@ msgid ""
 "FreeBSD.Contractions: Contracted words should not be used.  This rule avoids "
 "all contractions and suggests full words."
 msgstr ""
-"FreeBSD.Сокращения: Не следует использовать сокращенные слова.  Это правило "
-"исключает все сокращения и рекомендует использовать полные слова."
+"FreeBSD.Contractions: Не следует использовать сокращенные слова.  Это "
+"правило исключает все сокращения и рекомендует использовать полные слова."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:319
@@ -873,7 +879,7 @@ msgid ""
 "FreeBSD.Hyphens: Often adverbs ending with 'ly' are added with a hyphen "
 "which is wrong."
 msgstr ""
-"FreeBSD.Дефисы: Часто наречия, оканчивающиеся на 'ly', добавляются с "
+"FreeBSD.Hyphens: Часто наречия, оканчивающиеся на 'ly', добавляются с "
 "дефисом, что является ошибкой."
 
 #. type: Plain text
@@ -882,8 +888,8 @@ msgid ""
 "FreeBSD.Spacing: Often double spaces are hard to catch with the naked eye "
 "and this is addressed here."
 msgstr ""
-"FreeBSD.Расстояние: Часто двойные пробелы трудно заметить невооруженным "
-"глазом, и здесь это решается."
+"FreeBSD.Spacing: Часто двойные пробелы трудно заметить невооруженным глазом, "
+"и здесь это решается."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:328
@@ -943,8 +949,8 @@ msgstr ""
 "Vale.Terms: Обеспечивает соблюдение *ПРЕДПОЧТИТЕЛЬНЫХ* терминов для проекта "
 "FreeBSD. В настоящее время список терминов пуст, и специфичные для FreeBSD "
 "термины будут добавляться постепенно. Если какое-либо слово считается "
-"правильным, но отсутствует в словаре, его следует добавить в файл "
-"[.filename]#.vale/styles/Vocab/Terms/accept.txt# в репозитории `doc`."
+"правильным, но отсутствует в словаре, его следует добавить в файл [."
+"filename]#.vale/styles/Vocab/Terms/accept.txt# в репозитории `doc`."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/writing-style/_index.adoc:344
