--- a/documentation/content/ru/books/fdp-primer/book.po
+++ b/documentation/content/ru/books/fdp-primer/book.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2022-02-01 09:20-0300\n"
 "PO-Revision-Date: 2025-07-05 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,11 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/book.adoc:1
 #, no-wrap
 msgid "Everything you need to know in order to start contributing to the FreeBSD Documentation Project"
-msgstr "Все, что вам нужно знать, чтобы начать участвовать в проекте документации FreeBSD"
+msgstr ""
+"Все, что вам нужно знать, чтобы начать участвовать в проекте документации "
+"FreeBSD"
 
 #. type: Title =
 #: documentation/content/en/books/fdp-primer/book.adoc:1
