--- a/documentation/content/ru/books/fdp-primer/doc-build/_index.po
+++ b/documentation/content/ru/books/fdp-primer/doc-build/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-06-23 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primerdoc-build_index/ru/>\n"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:1
 #, no-wrap
 msgid "Describes the FreeBSD Documentation Build Process"
 msgstr "Описывает процесс сборки документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:1
 #, no-wrap
 msgid "Chapter 5. The FreeBSD Documentation Build Process"
@@ -207,7 +207,9 @@ msgstr "Ниже приведены примеры сложных сборок:"
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:119
 #, no-wrap
 msgid "Build English and Spanish documentation with verbose and debug messages"
-msgstr "Собрать документацию на английском и испанском языках с подробными и отладочными сообщениями"
+msgstr ""
+"Собрать документацию на английском и испанском языках с подробными и "
+"отладочными сообщениями"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:126
@@ -395,8 +397,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:229
 msgid "This will build all English and French books in pdf."
-msgstr ""
-"Это соберет все книги на английском и французском языках в формате pdf."
+msgstr "Это соберет все книги на английском и французском языках в формате pdf."
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:232
@@ -460,7 +461,7 @@ msgid ""
 "The [.filename]#Makefile# in the [.filename]#website# directory will build "
 "only the website."
 msgstr ""
-"Файл [.filename]#Makefile# в директории [.filename]#website# предназначен "
+"Файл [.filename]#Makefile# в каталоге [.filename]#website# предназначен "
 "только для сборки веб-сайта."
 
 #. type: delimited block = 4
@@ -528,7 +529,8 @@ msgstr ""
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
-"# all (default)\t-\tgenerate the books TOC and compile all the documentation\n"
+"# all (default)\t-\tgenerate the books TOC and compile all the "
+"documentation\n"
 "# clean\t\t- \tremoves generated files\n"
 "# run\t\t-\tserves the built documentation site for local browsing\n"
 "# pdf\t\t-\tbuild PDF versions of the articles and books.\n"
@@ -539,8 +541,10 @@ msgstr ""
 "#\t\t\tdirectory.\n"
 "# epub\t\t-\tbuild EPUB versions of the articles and books (Experimental).\n"
 "#\n"
-"# The run target uses hugo's built-in webserver to make the documentation site\n"
-"# available for local browsing.  The documentation should have been built prior\n"
+"# The run target uses hugo's built-in webserver to make the documentation "
+"site\n"
+"# available for local browsing.  The documentation should have been built "
+"prior\n"
 "# to attempting to use the `run` target.  By default, hugo will start its\n"
 "# webserver on port 1313.\n"
 
@@ -573,7 +577,8 @@ msgid ""
 "ALL_LANGUAGES=\tbn-bd da de el en es fr hu it ja ko mn nl pl pt-br ru tr zh-cn zh-tw <.>\n"
 msgstr ""
 "# List of all languages we have content for\n"
-"ALL_LANGUAGES=\tbn-bd da de el en es fr hu it ja ko mn nl pl pt-br ru tr zh-cn zh-tw <.>\n"
+"ALL_LANGUAGES=\tbn-bd da de el en es fr hu it ja ko mn nl pl pt-br ru tr zh-"
+"cn zh-tw <.>\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:294
@@ -616,7 +621,8 @@ msgid ""
 msgstr ""
 ".if defined(DOC_LANG) && !empty(DOC_LANG)\n"
 "LANGUAGES=\t${DOC_LANG:S/,/ /g}\n"
-".if  ${LANGUAGES:Men} == \"\" && ${.TARGETS:Mpdf*} == \"\" && ${.TARGETS:Mhtml*} == \"\"\n"
+".if  ${LANGUAGES:Men} == \"\" && ${.TARGETS:Mpdf*} == \"\" && ${."
+"TARGETS:Mhtml*} == \"\"\n"
 ".warning \"Warning: cannot skip 'en'; adding it back\"\n"
 "LANGUAGES+=\ten\n"
 ".endif\n"
@@ -799,7 +805,8 @@ msgid ""
 msgstr ""
 "requirements-pdf:\n"
 ".if !exists(${LOCALBASE}/bin/asciidoctor-pdf)\n"
-"\t@(echo ${LOCALBASE}/bin/asciidoctor-pdf not found, please run 'pkg install rubygem-asciidoctor-pdf'; exit 1)\n"
+"\t@(echo ${LOCALBASE}/bin/asciidoctor-pdf not found, please run 'pkg install "
+"rubygem-asciidoctor-pdf'; exit 1)\n"
 ".endif\n"
 
 #. type: delimited block . 4
@@ -813,7 +820,8 @@ msgid ""
 msgstr ""
 "requirements-epub:\n"
 ".if !exists(${LOCALBASE}/bin/asciidoctor-epub3)\n"
-"\t@(echo ${LOCALBASE}/bin/asciidoctor-epub3 not found, please run 'pkg install rubygem-asciidoctor-epub3'; exit 1)\n"
+"\t@(echo ${LOCALBASE}/bin/asciidoctor-epub3 not found, please run 'pkg "
+"install rubygem-asciidoctor-epub3'; exit 1)\n"
 ".endif\n"
 
 #. type: delimited block . 4
@@ -860,7 +868,8 @@ msgid ""
 msgstr ""
 "run-local: .PHONY <.>\n"
 "\tHUGO_DISABLELANGUAGES=\"${SKIP_LANGS}\" ${HUGO_CMD} server \\\n"
-"\t\t${HUGO_ARGS} -D $(BIND:D--bind=$(BIND)) --baseURL=\"http://$(.HOST):1313\"\n"
+"\t\t${HUGO_ARGS} -D $(BIND:D--bind=$(BIND)) --baseURL=\"http://$(.HOST):"
+"1313\"\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:400
@@ -915,7 +924,8 @@ msgid ""
 msgstr ""
 "#\n"
 "# PDF targets\n"
-"# Use DOC_LANG to choose the language, e.g., make DOC_LANG=\"en fr\" pdf-books\n"
+"# Use DOC_LANG to choose the language, e.g., make DOC_LANG=\"en fr\" pdf-"
+"books\n"
 "#\n"
 "pdf: pdf-articles pdf-books\n"
 
@@ -1005,7 +1015,8 @@ msgstr ""
 "#\n"
 "# HTML targets\n"
 "#\n"
-"html: build-offline html-clean-global html-clean-articles html-clean-books html-archive html-archive-clean-files\n"
+"html: build-offline html-clean-global html-clean-articles html-clean-books "
+"html-archive html-archive-clean-files\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:450
@@ -1091,7 +1102,8 @@ msgid ""
 msgstr ""
 "html-archive-clean-files:\n"
 ".if defined(DOC_HTML_ARCHIVE)\n"
-"\tfind ${.CURDIR}/public/ ! -name '*.pdf' ! -name '*.tar.gz' -type f -delete\n"
+"\tfind ${.CURDIR}/public/ ! -name '*.pdf' ! -name '*.tar.gz' -type f -"
+"delete\n"
 "\tfind ${.CURDIR}/public/ -type d -empty -delete\n"
 ".endif\n"
 
@@ -1107,7 +1119,8 @@ msgid ""
 msgstr ""
 "#\n"
 "# EPUB targets\n"
-"# Use DOC_LANG to choose the language, e.g., make DOC_LANG=\"en fr\" epub-books\n"
+"# Use DOC_LANG to choose the language, e.g., make DOC_LANG=\"en fr\" epub-"
+"books\n"
 "#\n"
 "epub: epub-articles epub-books\n"
 
@@ -1132,8 +1145,10 @@ msgstr ""
 "\t@echo ---------------------------------------------------------------\n"
 "\t@echo !!! EPUB output is experimental !!!\n"
 "\t@echo\n"
-"\t@echo Asciidoctor EPUB3 is currently alpha software. Use accordingly. Although the\n"
-"\t@echo bulk of AsciiDoc content is converted, there’s still work needed to fill in\n"
+"\t@echo Asciidoctor EPUB3 is currently alpha software. Use accordingly. "
+"Although the\n"
+"\t@echo bulk of AsciiDoc content is converted, there’s still work needed to "
+"fill in\n"
 "\t@echo gaps where conversion is incomplete or unstyled.\n"
 "\t@echo https://docs.asciidoctor.org/epub3-converter/latest/#project-status\n"
 "\t@echo ---------------------------------------------------------------\n"
@@ -1162,8 +1177,10 @@ msgstr ""
 "\t@echo ---------------------------------------------------------------\n"
 "\t@echo !!! EPUB output is experimental !!!\n"
 "\t@echo\n"
-"\t@echo Asciidoctor EPUB3 is currently alpha software. Use accordingly. Although the\n"
-"\t@echo bulk of AsciiDoc content is converted, there’s still work needed to fill in\n"
+"\t@echo Asciidoctor EPUB3 is currently alpha software. Use accordingly. "
+"Although the\n"
+"\t@echo bulk of AsciiDoc content is converted, there’s still work needed to "
+"fill in\n"
 "\t@echo gaps where conversion is incomplete or unstyled.\n"
 "\t@echo https://docs.asciidoctor.org/epub3-converter/latest/#project-status\n"
 "\t@echo ---------------------------------------------------------------\n"
@@ -1496,7 +1513,8 @@ msgid ""
 msgstr ""
 "run-local: .PHONY <.>\n"
 "\tHUGO_DISABLELANGUAGES=\"${SKIP_LANGS}\" ${HUGO_CMD} server \\\n"
-"\t    ${HUGO_ARGS} -D $(BIND:D--bind=$(BIND)) --baseURL=\"http://$(.HOST):1313\"\n"
+"\t    ${HUGO_ARGS} -D $(BIND:D--bind=$(BIND)) --baseURL=\"http://$(.HOST):"
+"1313\"\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/doc-build/_index.adoc:644
