--- a/documentation/content/ru/books/fdp-primer/editor-config/_index.po
+++ b/documentation/content/ru/books/fdp-primer/editor-config/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
-"PO-Revision-Date: 2025-08-19 04:45+0000\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"PO-Revision-Date: 2025-10-21 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksfdp-primereditor-config_index/ru/>\n"
@@ -18,13 +18,15 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:1
 #, no-wrap
 msgid "Configuration used in the texts editors in the FreeBSD Documentation Project"
-msgstr "Конфигурация, используемая в текстовых редакторах в проекте документации FreeBSD"
+msgstr ""
+"Конфигурация, используемая в текстовых редакторах в проекте документации "
+"FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:1
 #, no-wrap
 msgid "Chapter 13. Editor Configuration"
@@ -72,7 +74,7 @@ msgstr ""
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:309
 #, no-wrap
 msgid "Use"
-msgstr "Использование"
+msgstr "Используйте"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:63
@@ -94,8 +96,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:66
 msgid "Press kbd:[T] to replace groups of eight spaces with a tab."
-msgstr ""
-"Нажмите kbd:[T], чтобы заменить группы из восьми пробелов на табуляцию."
+msgstr "Нажмите kbd:[T], чтобы заменить группы из восьми пробелов на табуляцию."
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:69
@@ -140,7 +141,8 @@ msgid ""
 "% git clone --depth 1 https://github.com/dense-analysis/ale.git ~/.vim/pack/vendor/start/ale\n"
 msgstr ""
 "% mkdir -p ~/.vim/pack/vendor/start\n"
-"% git clone --depth 1 https://github.com/dense-analysis/ale.git ~/.vim/pack/vendor/start/ale\n"
+"% git clone --depth 1 https://github.com/dense-analysis/ale.git ~/.vim/pack/"
+"vendor/start/ale\n"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:87
@@ -371,8 +373,7 @@ msgstr "Emacs"
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:178
 msgid "Install from package:editors/emacs[] or package:editors/emacs-devel[]."
-msgstr ""
-"Установка из package:editors/emacs[] или package:editors/emacs-devel[]."
+msgstr "Установка из package:editors/emacs[] или package:editors/emacs-devel[]."
 
 #. type: Title ===
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:180
@@ -388,15 +389,17 @@ msgid ""
 "If MELPA is not already in Emacs's packages-archives, it can be added by "
 "evaluating"
 msgstr ""
-"Пакет link:https://www.flycheck.org/[Flycheck] доступен из link:https://"
-"melpa.org/[Milkypostman's Emacs Lisp Package Archive] (MELPA). Если MELPA "
-"ещё не добавлен в packages-archives Emacs, его можно добавить, выполнив"
+"Пакет link:https://www.flycheck.org/[Flycheck] доступен из link:https://melpa"
+".org/[Milkypostman's Emacs Lisp Package Archive] (MELPA). Если MELPA ещё не "
+"добавлен в packages-archives Emacs, его можно добавить, выполнив"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:188
 #, no-wrap
 msgid "(add-to-list 'package-archives '(\"melpa\" . \"http://stable.melpa.org/packages/\") t)\n"
-msgstr "(add-to-list 'package-archives '(\"melpa\" . \"http://stable.melpa.org/packages/\") t)\n"
+msgstr ""
+"(add-to-list 'package-archives '(\"melpa\" . \"http://stable.melpa.org/"
+"packages/\") t)\n"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:191
@@ -405,8 +408,8 @@ msgid ""
 "[.filename]#~/.emacs.el#, or [.filename]#~.emacs.d/init.el#) to make this "
 "change permanent."
 msgstr ""
-"Добавьте строку в файл инициализации Emacs (один из [.filename]#~/.emacs#, "
-"[.filename]#~/.emacs.el# или [.filename]#~/.emacs.d/init.el#), чтобы сделать "
+"Добавьте строку в файл инициализации Emacs (один из [.filename]#~/.emacs#, [."
+"filename]#~/.emacs.el# или [.filename]#~/.emacs.d/init.el#), чтобы сделать "
 "это изменение постоянным."
 
 #. type: Plain text
@@ -515,7 +518,8 @@ msgstr ""
 "  (eval . (require 'flycheck))\n"
 "  (eval . (flycheck-mode 1))\n"
 "  (flycheck-checker . igor)\n"
-"  (eval . (add-to-list 'rng-schema-locating-files \"~/.emacs.d/schema/schemas.xml\"))))\n"
+"  (eval . (add-to-list 'rng-schema-locating-files \"~/.emacs.d/schema/schemas"
+".xml\"))))\n"
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/editor-config/_index.adoc:238
