--- a/documentation/content/ru/books/fdp-primer/examples/_index.po
+++ b/documentation/content/ru/books/fdp-primer/examples/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-07-03 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/examples/_index.adoc:1
 #, no-wrap
 msgid "Example of an article and a book used in the FreeBSD Documentation Project"
 msgstr "Пример статьи и книги, используемых в проекте документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/examples/_index.adoc:1
 #, no-wrap
 msgid "Appendix A. Examples"
@@ -49,9 +49,9 @@ msgstr ""
 "Эти примеры не являются исчерпывающими — они не содержат всех элементов, "
 "которые может быть желательно использовать, особенно в преамбуле документа. "
 "Для дополнительных примеров использования AsciiDoctor изучите исходный "
-"AsciiDoc код для этого и других документов, доступных в Git-репозитории "
-"*doc* или онлайн, начиная с link:https://cgit.freebsd.org/doc/[https://"
-"cgit.freebsd.org/doc/]."
+"AsciiDoc код для этого и других документов, доступных в Git-репозитории *doc*"
+" или онлайн, начиная с link:https://cgit.freebsd.org/doc/[https://cgit."
+"freebsd.org/doc/]."
 
 #. type: Block title
 #: documentation/content/en/books/fdp-primer/examples/_index.adoc:55
