--- a/documentation/content/ru/books/fdp-primer/rosetta/_index.po
+++ b/documentation/content/ru/books/fdp-primer/rosetta/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-06-23 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/rosetta/_index.adoc:1
 #, no-wrap
 msgid "Rosetta Stone with the differences between Docbook and AsciiDoc"
 msgstr "Розеттский камень с различиями между Docbook и AsciiDoc"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/rosetta/_index.adoc:1
 #, no-wrap
 msgid "Chapter 7. Rosetta Stone"
@@ -581,7 +581,10 @@ msgstr ""
 "----\n"
 "[[bsdinstall-newboot-loader-menu]]\n"
 ".Меню загрузчика FreeBSD\n"
-"image::bsdinstall/bsdinstall-newboot-loader-menu[Меню загрузчика FreeBSD с вариантами 1-6: загрузка многопользовательского режима, загрузка однопользовательского режима, переход в командную строку загрузчика, перезагрузка, выбор ядра для загрузки и параметров загрузки]\n"
+"image::bsdinstall/bsdinstall-newboot-loader-menu[Меню загрузчика FreeBSD с "
+"вариантами 1-6: загрузка многопользовательского режима, загрузка "
+"однопользовательского режима, переход в командную строку загрузчика, "
+"перезагрузка, выбор ядра для загрузки и параметров загрузки]\n"
 "----"
 
 #. type: Table
@@ -645,7 +648,8 @@ msgid ""
 msgstr ""
 "[source,xml]\n"
 "----\n"
-"<table xml:id=\"partition-schemes\" frame=\"none\" rowsep=\"1\" pgwide=\"1\">\n"
+"<table xml:id=\"partition-schemes\" frame=\"none\" rowsep=\"1\" pgwide=\"1\">"
+"\n"
 " <title>Схемы разделов</title>\n"
 "\n"
 " <tgroup cols=\"2\" align=\"left\">\n"
