--- a/documentation/content/ru/books/fdp-primer/see-also/_index.po
+++ b/documentation/content/ru/books/fdp-primer/see-also/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-06-01 18:10+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,13 +18,13 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/see-also/_index.adoc:1
 #, no-wrap
 msgid "More information about the FreeBSD Documentation Project"
 msgstr "Дополнительная информация о проекте документации FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/see-also/_index.adoc:1
 #, no-wrap
 msgid "Chapter 15. See Also"
@@ -97,8 +97,7 @@ msgstr "link:https://asciidoctor.org/[AsciiDoctor]"
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/see-also/_index.adoc:71
 msgid "link:https://docs.asciidoctor.org/[AsciiDoctor Documentation Portal]"
-msgstr ""
-"link:https://docs.asciidoctor.org/[Документационный портал AsciiDoctor]"
+msgstr "link:https://docs.asciidoctor.org/[Документационный портал AsciiDoctor]"
 
 #. type: Title ==
 #: documentation/content/en/books/fdp-primer/see-also/_index.adoc:73
