--- a/documentation/content/ru/books/fdp-primer/trademarks/_index.po
+++ b/documentation/content/ru/books/fdp-primer/trademarks/_index.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 14:02+0300\n"
+"POT-Creation-Date: 2025-05-01 19:56-0300\n"
 "PO-Revision-Date: 2025-06-01 18:10+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -19,13 +19,15 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/books/fdp-primer/trademarks/_index.adoc:1
 #, no-wrap
 msgid "Guidelines for trademarks in the FreeBSD Documentation Project"
-msgstr "Руководство по использованию товарных знаков в Документационном проекте FreeBSD"
+msgstr ""
+"Руководство по использованию товарных знаков в Документационном проекте "
+"FreeBSD"
 
-#. type: Yaml Front Matter Hash Value: title
+#. type: YAML Front Matter: title
 #: documentation/content/en/books/fdp-primer/trademarks/_index.adoc:1
 #, no-wrap
 msgid "Chapter 14. Trademarks"
@@ -148,7 +150,8 @@ msgstr ""
 "description: How to contribute to the FreeBSD Project\n"
 "trademarks: [\"freebsd\", \"ieee\", \"general\"]\n"
 "weight: 15\n"
-"tags: [\"Contributing\", \"FreeBSD\", \"Non-Programmer Tasks\", \"Programmer Tasks\"]\n"
+"tags: [\"Contributing\", \"FreeBSD\", \"Non-Programmer Tasks\", \"Programmer "
+"Tasks\"]\n"
 "---\n"
 
 #. type: Plain text
@@ -170,13 +173,19 @@ msgstr "FreeBSD is a registered trademark of the FreeBSD Foundation.\n"
 #: documentation/content/en/books/fdp-primer/trademarks/_index.adoc:91
 #, no-wrap
 msgid "IEEE, POSIX, and 802 are registered trademarks of Institute of Electrical and Electronics Engineers, Inc. in the United States.\n"
-msgstr "IEEE, POSIX, and 802 are registered trademarks of Institute of Electrical and Electronics Engineers, Inc. in the United States.\n"
+msgstr ""
+"IEEE, POSIX, and 802 are registered trademarks of Institute of Electrical "
+"and Electronics Engineers, Inc. in the United States.\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/fdp-primer/trademarks/_index.adoc:93
 #, no-wrap
 msgid "Many of the designations used by manufacturers and sellers to distinguish their products are claimed as trademarks. Where those designations appear in this document, and the FreeBSD Project was aware of the trademark claim, the designations have been followed by the “™” or the “®” symbol.\n"
-msgstr "Many of the designations used by manufacturers and sellers to distinguish their products are claimed as trademarks. Where those designations appear in this document, and the FreeBSD Project was aware of the trademark claim, the designations have been followed by the “™” or the “®” symbol.\n"
+msgstr ""
+"Many of the designations used by manufacturers and sellers to distinguish "
+"their products are claimed as trademarks. Where those designations appear in "
+"this document, and the FreeBSD Project was aware of the trademark claim, the "
+"designations have been followed by the “™” or the “®” symbol.\n"
 
 #. type: Plain text
 #: documentation/content/en/books/fdp-primer/trademarks/_index.adoc:97
